--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=springdemo
 
 datasource.url=jdbc:mysql://localhost:3306/northwind
 datasource.username=root
+datasource.password=yearup
